@@ -1,3 +1,7 @@
+Jan 18, 2006
+
+  * ADDED: Option --nochecksaved
+
 Dec 5, 2005
 
   * ADDED: Datatype stuff to the rdfs.rdfs base ontology.
